--- a/Introduction+to+CUDA+Python+with+Numba.ipynb
+++ b/Introduction+to+CUDA+Python+with+Numba.ipynb
@@ -1641,7 +1641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
@@ -1663,29 +1663,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 74,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Remember that we can't use numpy math function on the GPU...\n",
-    "from numpy import exp\n",
-    "\n",
+    "# from numpy import exp\n",
+    "from math import exp\n",
     "# Consider modifying the 3 values in this cell to optimize host <-> device memory movement\n",
-    "normalized = np.empty_like(greyscales)\n",
-    "weighted = np.empty_like(greyscales)\n",
-    "activated = np.empty_like(greyscales)\n",
+    "normalized = cuda.to_device(greyscales)\n",
+    "weighted = cuda.to_device(greyscales)\n",
+    "activated = cuda.to_device(greyscales)\n",
     "\n",
     "# Modify these 3 function calls to run on the GPU\n",
+    "@jit\n",
     "def normalize(grayscales):\n",
     "    return grayscales / 255\n",
-    "\n",
+    "@jit\n",
     "def weigh(values, weights):\n",
     "    return values * weights\n",
-    "        \n",
+    "\n",
+    "@vectorize(['float32(float32)'], target = 'cuda')\n",
     "def activate(values):\n",
-    "    return ( np.exp(values) - np.exp(-values) ) / ( np.exp(values) + np.exp(-values) )"
+    "    return ( math.exp(values) - math.exp(-values) ) / ( math.exp(values) + math.exp(-values) )"
    ]
   },
   {
@@ -1699,17 +1699,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.85 ms ± 10.3 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%%timeit\n",
     "# Feel free to modify the 3 function calls in this cell\n",
     "normalized = normalize(greyscales)\n",
     "weighted = weigh(normalized, weights)\n",
-    "SOLUTION = activate(weighted)"
+    "SOLUTION = activate(cuda.to_device(weighted))"
    ]
   },
   {
@@ -1738,11 +1744,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./\r\n",
+      "./.ipynb_checkpoints/\r\n",
+      "./.ipynb_checkpoints/Introduction to CUDA Python with Numba-checkpoint.ipynb\r\n",
+      "./solutions/\r\n",
+      "./solutions/zero_suppress_solution.py\r\n",
+      "./solutions/make_pulses_solution.py\r\n",
+      "./solutions/monte_carlo_pi_solution.py\r\n",
+      "./images/\r\n",
+      "./images/DLI Header.png\r\n",
+      "./images/numba_flowchart.png\r\n",
+      "./Introduction to CUDA Python with Numba.ipynb\r\n",
+      "./assessment/\r\n",
+      "./assessment/definitions.py\r\n",
+      "./assessment/calls.py\r\n",
+      "tar: .: file changed as we read it\r\n"
+     ]
+    }
+   ],
    "source": [
     "!tar -zcvf section1.tar.gz ."
    ]
@@ -1773,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {
     "collapsed": true
    },
@@ -1801,11 +1827,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.01768239 -0.99984365]\n",
+      " [-0.85761208 -0.51429711]\n",
+      " [ 0.13655971 -0.99063184]\n",
+      " [-0.51778456 -0.85551104]\n",
+      " [-0.0382235  -0.99926922]\n",
+      " [ 0.97718026  0.21241173]\n",
+      " [-0.99291763  0.1188048 ]\n",
+      " [-0.02512378  0.99968435]\n",
+      " [ 0.97972085  0.20036731]\n",
+      " [ 0.99843226 -0.05597333]]\n"
+     ]
+    }
+   ],
    "source": [
     "angles = np.random.uniform(-np.pi, np.pi, 10)\n",
     "coords = np.stack([np.cos(angles), np.sin(angles)], axis=1)\n",
@@ -1821,11 +1862,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.        , 1.        , 0.99999994, 1.        , 1.        ,\n",
+       "       1.        , 1.        , 1.        , 1.        , 1.        ],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "l2_norm(coords)"
    ]
@@ -1836,6 +1888,15 @@
    "source": [
     "<a href=\"https://www.nvidia.com/dli\"> <img src=\"images/DLI Header.png\" alt=\"Header\" style=\"width: 400px;\"/> </a>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
